Fix #top-page z-index

--- a/sass/_skeleton.scss
+++ b/sass/_skeleton.scss
@@ -353,7 +353,7 @@ footer {
   background-color: #ffffff;
   position: fixed;
   margin: 0;
-  z-index: 1000;
+  z-index: 999;
 }
 #top-page.fixed {
   border-bottom: 1px solid #ededed;
